tests/Suite/resolver/error/ambiguity.nk
type L =
  | A String Int
  | D Int String

import Main.L (L as F, D as A, A as A)

let a (b: F): String = A